--- a/PJE1626361_MonsterWorld_03_Practice.vcxproj
+++ b/PJE1626361_MonsterWorld_03_Practice.vcxproj
@@ -187,12 +187,17 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Canvas.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="Matrix.h" />
+    <ClInclude Include="Monster.h" />
+    <ClInclude Include="MonsterWorld.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="PJE1626361_MonsterWorld_03_Practice.h" />
     <ClInclude Include="PJE1626361_MonsterWorld_03_PracticeDlg.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="VariousMonsters.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
